fix livraison test srvice bug version jdk